samples/_failures_safe/1761041869_1bc6c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbece186.c: In function ‘main’:
./samples/SAFE/__tmp_fbece186.c:173:5: error: expected expression at end of input
  173 |     if (fgets(input, sizeof(input), stdin) ==
      |     ^~
./samples/SAFE/__tmp_fbece186.c:173:5: error: expected declaration or statement at end of input
